# papertape

./: .gitignore  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  config.h.in  configure  configure.ac  papertape.h  pbmtape.cc  pt_and.cc  pt_asc2baudot.cc  pt_invert.cc  pt_marquee.cc  pt_or.cc  pt_random.cc  pt_render.cc  pt_setmsb.cc  pt_tape2txt.cc  pt_tapein.py  pt_xor.cc  setup.py  tapein.py  tapeout.py  tapeutil.py
papertape/: __init__.py  font5x7.py  pbmtape.py  tape.py  tty.py
